--- a/tiendaVirtualService/src/main/resources/application.properties
+++ b/tiendaVirtualService/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.servlet.contextPath=/tiendaVirtual
 server.port=8085
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/tiendavirtualdb
+spring.datasource.url=jdbc:mysql://localhost:3306/tiendavirtualdb?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
