ajustes de producto con categoria

--- a/tiendaVirtualService/bin/main/application.properties
+++ b/tiendaVirtualService/bin/main/application.properties
@@ -12,4 +12,5 @@ spring.jpa.show-sql=true
 security.basic.enable= false   
 management.security.enabled= false 
 debug = false
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 security.ignored=/**
