Modificando vistas de angular con primeNg
Inicio de crud de factura

--- a/tiendaVirtualService/bin/main/application.properties
+++ b/tiendaVirtualService/bin/main/application.properties
@@ -3,7 +3,7 @@ server.port=8088
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost:3306/tiendavirtualdb?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=kmilo123
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.datasource.driverClassName=org.hibernate.dialect.MySQL5Dialect
